--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           # Your GitHub token
-          token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.TOKEN }}
+          committer_token: ${{ secrets.TOKEN }}
           user: Nirzak
           #repositories_batch: 80
           committer_message: github metrics updated
